--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,6 +24,16 @@ build: &build
     name: Build packages and demo site
     command: yarn build
 
+tag: &tag
+  run:
+    # Is it a tagged build? Matches v1.2.3 and e.g. v1.2.3-alpha.1
+    name: Get version tag
+    command: |
+      if [[ `git describe 2>/dev/null` == ^v([0-9]+\.){2}[0-9+](-[a-z]+(\.[0-9]+)?)?$ ]] ; then
+        # Save version for later
+        export JARL_VERSION=$(git describe)
+      fi
+
 # JARL CircleCI 2.0 configuration file
 version: 2
 jobs:
@@ -31,6 +41,11 @@ jobs:
     <<: *defaults
     steps:
       - checkout
+      - *tag
+      - run:
+          name: Notify build
+          command: yarn notify build ${CIRCLE_COMMIT} ${CIRCLE_BUILD_NUM} ${CIRCLE_PULL_REQUEST} ${JARL_VERSION}
+          
       - *restore
       - *setup
 
@@ -68,6 +83,7 @@ jobs:
       - checkout
       - *restore
       - *setup
+      - *tag
 
       - run:
           name: Export build number
@@ -85,11 +101,12 @@ jobs:
       # These have to be published before docker can be built; even tho
       # they won't be installed, Yarn tries to resolve them and errors
       # if they don't exist yet. https://github.com/yarnpkg/yarn/issues/4646
+
       - run:
           name: Publish to npm if tagged
           command: |
             # Is it a tagged build? Matches v1.2.3 and e.g. v1.2.3-alpha.1
-            if [[ `git describe 2>/dev/null` == ^v([0-9]+\.){2}[0-9+](-[a-z]+(\.[0-9]+)?)?$ ]] ; then
+            if [[ `git describe 2>/dev/null` =~ ^v([0-9]+\.){2}[0-9]+(-[a-z]+(\.[0-9]+)?)?$ ]] ; then
               # Save version for later
               export JARL_VERSION=$(git describe)
               # Publish packages on npm              
@@ -149,7 +166,7 @@ jobs:
             # Deploy and store URL in env
             # sed regexes are fairly arcane but got this working eventually
             NOW_DEPLOY=$(now -t ${NOW_TOKEN} | sed -n "s/.*\(https:\/\/jarl-downplay-co-.*\.sh\).*/\1/p" )
-            echo JARL demos staged to ${NOW_DEPLOY}
+            yarn notify staging
       - run:
           name: Run E2E against staging
           command: |
