--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "ci-test": "lerna run ci-test --stream",
         "ci-e2e": "lerna run ci-e2e --stream",
         "ci-publish": "lerna exec -- npm publish",
+        "ci-notify": "node ./scripts/notify.js",
         "lint": "lerna run lint --stream",
         "bootstrap": "lerna bootstrap",
         "tag-version": "lerna publish --skip-npm",
@@ -27,6 +28,7 @@
         "eslint-plugin-jsx-a11y": "^6.0.2",
         "eslint-plugin-react": "^7.3.0",
         "husky": "^0.14.3",
+        "isomorphic-fetch": "^2.2.1",
         "lerna": "^2.10.0",
         "lint-staged": "^7.0.4",
         "prettier": "^1.11.1"
