--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,7 @@ tag: &tag
     # Is it a tagged build? Matches v1.2.3 and e.g. v1.2.3-alpha.1
     name: Get version tag
     command: |
-      if [[ `git describe 2>/dev/null` == ^v([0-9]+\.){2}[0-9+](-[a-z]+(\.[0-9]+)?)?$ ]] ; then
+      if [[ `git describe 2>/dev/null` =~ ^v([0-9]+\.){2}[0-9]+(-[a-z]+(\.[0-9]+)?)?$ ]] ; then
         # Save version for later
         export JARL_VERSION=$(git describe)
       fi
@@ -44,7 +44,7 @@ jobs:
       - *tag
       - run:
           name: Notify build
-          command: yarn notify build ${CIRCLE_COMMIT} ${CIRCLE_BUILD_NUM} ${CIRCLE_PULL_REQUEST} ${JARL_VERSION}
+          command: yarn notify build
           
       - *restore
       - *setup
@@ -106,9 +106,7 @@ jobs:
           name: Publish to npm if tagged
           command: |
             # Is it a tagged build? Matches v1.2.3 and e.g. v1.2.3-alpha.1
-            if [[ `git describe 2>/dev/null` =~ ^v([0-9]+\.){2}[0-9]+(-[a-z]+(\.[0-9]+)?)?$ ]] ; then
-              # Save version for later
-              export JARL_VERSION=$(git describe)
+            if [ "$JARL_VERSION" ] ; then
               # Publish packages on npm              
               cd packages/jarl-react && npm publish
               cd ../jarl-react-native && npm publish
