--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "eslint-plugin-import": "^2.7.0",
         "eslint-plugin-jsx-a11y": "^6.0.2",
         "eslint-plugin-react": "^7.3.0",
+        "fs-extra": "^5.0.0",
         "husky": "^0.14.3",
         "isomorphic-fetch": "^2.2.1",
         "lerna": "^2.10.0",
