Attempt to reuse workspace

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,7 +22,9 @@ setup: &setup
 build: &build
   run: 
     name: Build packages and demo site
-    command: yarn build
+    command: |
+      export JARL_BUILD_NUMBER=${CIRCLE_BUILD_NUM}
+      yarn build
 
 tag: &tag
   run:
@@ -77,20 +79,24 @@ jobs:
       - run:
           command: yarn ci-stop
           working_directory: demo
+      - persist_to_workspace:
+          # Must be an absolute path, or relative path from working_directory. This is a directory on the container which is 
+          # taken to be the root directory of the workspace.
+          root: .
+          # Must be relative path from root
+          paths:
+            - .
 
   publish:
     <<: *defaults
     steps:
-      - checkout
-      - *restore
+
+      - attach_workspace:
+          # Must be absolute path or relative path from working_directory
+          at: .
+
       - *setup
       - *tag
-
-      - run:
-          name: Export build number
-          command: export JARL_BUILD_NUMBER=${CIRCLE_BUILD_NUM}
-
-      - *build
 
       # Create auth file for npm
       - run:
