--- a/demo/Dockerfile
+++ b/demo/Dockerfile
@@ -6,10 +6,12 @@ WORKDIR /app
 COPY .babelrc /app/
 COPY package.json /app/
 COPY yarn.lock /app/
-RUN yarn install --production
+
+# npm production install is smaller for some reason
+RUN npm install --production=true
 
 COPY dist /app/dist
 COPY server /app/server
 
 EXPOSE 3210
-CMD [ "yarn", "start-prod" ]
+CMD [ "npm", "run", "start-prod" ]
