Carry screenshots over in workspace

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -94,6 +94,7 @@ jobs:
           root: .
           paths:
             - demo/dist
+            - demo/cypress/screenshots
             - packages/jarl-react/*.js
             - packages/jarl-react/*/*.js
             - packages/jarl-react/es/*/*.js
