--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,9 +35,7 @@ tag: &tag
       if [[ `git describe 2>/dev/null` =~ ^v([0-9]+\.){2}[0-9]+(-[a-z]+(\.[0-9]+)?)?$ ]] ; then
         # Save version for later
         JARL_VERSION=$(git describe)
-        env="export JARL_VERSION=$JARL_VERSION
-        JARL_VERSION=$JARL_VERSION"
-        echo "$env" >> ~/.bashrc
+        echo export JARL_VERSION=$JARL_VERSION >> "$BASH_ENV"
       fi
       
 # JARL CircleCI 2.0 configuration file
@@ -195,9 +193,7 @@ jobs:
             NOW_DEPLOY=$(now -t ${NOW_TOKEN} | sed -n "s/.*\(https:\/\/jarl-downplay-co-.*\.sh\).*/\1/p" )
             export NOW_DEPLOY=$NOW_DEPLOY
             yarn notify staging
-            env="export NOW_DEPLOY=$NOW_DEPLOY
-            NOW_DEPLOY=$NOW_DEPLOY"
-            echo "$env" >> ~/.bashrc
+            echo export NOW_DEPLOY=$NOW_DEPLOY >> "$BASH_ENV"
 
       - run:
           name: Run E2E against staging
