--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,10 +32,10 @@ tag: &tag
     # Is it a tagged build? Matches v1.2.3 and e.g. v1.2.3-alpha.1
     name: Get version tag
     command: |
-      if [[ `git describe 2>/dev/null` =~ ^v([0-9]+\.){2}[0-9]+(-[a-z]+(\.[0-9]+)?)?$ ]] ; then
+      JARL_VERSION=$(git describe 2>/dev/null)
+      if [[ "$JARL_VERSION" =~ ^v([0-9]+\.){2}[0-9]+(-[a-z]+(\.[0-9]+)?)?$ ]] ; then
         # Save version for later
-        JARL_VERSION=$(git describe)
-        echo export JARL_VERSION=$JARL_VERSION >> "$BASH_ENV"
+        echo export JARL_VERSION=$JARL_VERSION >> ~/.bashrc
       fi
       
 # JARL CircleCI 2.0 configuration file
@@ -193,7 +193,7 @@ jobs:
             NOW_DEPLOY=$(now -t ${NOW_TOKEN} | sed -n "s/.*\(https:\/\/jarl-downplay-co-.*\.sh\).*/\1/p" )
             export NOW_DEPLOY=$NOW_DEPLOY
             yarn notify staging
-            echo export NOW_DEPLOY=$NOW_DEPLOY >> "$BASH_ENV"
+            echo export NOW_DEPLOY=$NOW_DEPLOY >> ~/.bashrc
 
       - run:
           name: Run E2E against staging
