--- a/packages/jarl-react/package.json
+++ b/packages/jarl-react/package.json
@@ -1,6 +1,6 @@
 {
     "name": "jarl-react",
-    "version": "1.0.0-alpha.12",
+    "version": "1.0.0-alpha.13",
     "description": "Just Another Router Library for React",
     "main": "index.js",
     "module": "es/index.js",
@@ -29,9 +29,15 @@
         "StateProvider.js"
     ],
     "jest": {
-        "setupFiles": ["raf/polyfill", "./tools/configureJest.js"],
+        "setupFiles": [
+            "raf/polyfill",
+            "./tools/configureJest.js"
+        ],
         "testRegex": "__tests__/.+\\.test\\.js$",
-        "collectCoverageFrom": ["source/*.js", "source/lib/*.js"]
+        "collectCoverageFrom": [
+            "source/*.js",
+            "source/lib/*.js"
+        ]
     },
     "keywords": [
         "react",
