--- a/demo/package.json
+++ b/demo/package.json
@@ -58,6 +58,7 @@
         "react-hot-loader": "^4.0.1",
         "react-redux": "^5.0.6",
         "react-remarkable": "^1.1.3",
+        "react-syntax-highlighter": "^7.0.2",
         "rebass-emotion": "^1.0.7",
         "recompose": "^0.26.0",
         "redux": "^3.7.2",
