--- a/demo/package.json
+++ b/demo/package.json
@@ -41,6 +41,7 @@
         "emotion": "^8.0.12",
         "emotion-theming": "^8.0.12",
         "extract-text-webpack-plugin": "^4.0.0-beta.0",
+        "file-loader": "^1.1.11",
         "history": "^4.7.2",
         "jarl-react": "^1.0.0-alpha.13",
         "jarl-react-redux": "^1.0.0-alpha.13",
@@ -59,10 +60,11 @@
         "react-redux": "^5.0.6",
         "react-remarkable": "^1.1.3",
         "react-syntax-highlighter": "^7.0.2",
-        "rebass-emotion": "^1.0.7",
         "recompose": "^0.26.0",
         "redux": "^3.7.2",
         "sanitize.css": "^5.0.0",
+        "semantic-ui-css": "^2.3.1",
+        "semantic-ui-react": "^0.79.1",
         "style-loader": "^0.20.3",
         "webpack": "^4.5.0",
         "webpack-bundle-analyzer": "^2.11.1",
