--- a/demo/package.json
+++ b/demo/package.json
@@ -49,6 +49,7 @@
         "npm-run-all": "^4.1.2",
         "opn": "^5.2.0",
         "postcss-loader": "^2.1.3",
+        "prismjs": "^1.14.0",
         "prop-types": "^15.6.0",
         "ramda": "^0.25.0",
         "raw-loader": "^0.5.1",
@@ -63,7 +64,6 @@
         "react-syntax-highlighter": "^7.0.2",
         "recompose": "^0.26.0",
         "redux": "^3.7.2",
-        "sanitize.css": "^5.0.0",
         "semantic-ui-css": "^2.3.1",
         "semantic-ui-react": "^0.79.1",
         "style-loader": "^0.20.3",
