--- a/packages/jarl-react-native/package.json
+++ b/packages/jarl-react-native/package.json
@@ -1,6 +1,6 @@
 {
     "name": "jarl-react-native",
-    "version": "1.0.0-alpha.15",
+    "version": "1.0.0-beta.1",
     "description": "React Native support for JARL",
     "main": "main.js",
     "sideEffects": false,
@@ -50,7 +50,7 @@
     "dependencies": {
         "history": "^4.7.2",
         "invariant": "^2.2.4",
-        "jarl-react": "^1.0.0-alpha.15",
+        "jarl-react": "^1.0.0-beta.1",
         "prop-types": "^15.6.0",
         "warning": "^3.0.0"
     },
