--- a/demo/package.json
+++ b/demo/package.json
@@ -10,7 +10,8 @@
         "clean": "git clean -fdX .",
         "lint": "eslint . --max-warnings 0",
         "ci-stop": "pkill -SIGINT JARLDEMO",
-        "ci-cypress": "cypress run --record --key ${CYPRESS_DASHBOARD} --env JARL_VERSION=${JARL_VERSION},CIRCLE_BUILD_NUM=${CIRCLE_BUILD_NUM}",
+        "ci-cypress":
+            "cypress run --record --key ${CYPRESS_DASHBOARD} --env JARL_VERSION=${JARL_VERSION},CIRCLE_BUILD_NUM=${CIRCLE_BUILD_NUM}",
         "ci-start": "babel-node ./server/production.js",
         "local-e2e-run": "npm-run-all ci-cypress ci-stop",
         "local-e2e": "npm-run-all --parallel ci-start local-e2e-run"
@@ -18,23 +19,22 @@
     "dependencies": {
         "babel-cli": "^6.26.0",
         "babel-core": "^6.26.0",
-        "babel-eslint": "^8.1.0",
-        "babel-loader": "^7.1.2",
-        "babel-plugin-add-react-displayname": "^0.0.4",
         "babel-plugin-emotion": "^8.0.12",
-        "babel-plugin-syntax-dynamic-import": "^6.18.0",
         "babel-plugin-transform-class-properties": "^6.24.1",
         "babel-plugin-transform-object-rest-spread": "^6.26.0",
-        "babel-plugin-transform-react-stateless-component-name": "^1.1.2",
         "babel-plugin-transform-runtime": "^6.23.0",
         "babel-preset-env": "^1.6.1",
-        "babel-preset-react": "^6.24.1",
-        "babel-register": "^6.26.0",
         "babel-runtime": "^6.26.0",
         "express": "^4.16.3",
         "fs-extra": "^5.0.0"
     },
     "devDependencies": {
+        "babel-eslint": "^8.1.0",
+        "babel-loader": "^7.1.4",
+        "babel-plugin-add-react-displayname": "^0.0.4",
+        "babel-plugin-syntax-dynamic-import": "^6.18.0",
+        "babel-plugin-transform-react-stateless-component-name": "^1.1.2",
+        "babel-preset-react": "^6.24.1",
         "css-loader": "^0.28.11",
         "cypress": "^2.1.0",
         "documentation": "^6.1.0",
@@ -58,6 +58,7 @@
         "react-emotion": "^8.0.12",
         "react-helmet": "^5.2.0",
         "react-hot-loader": "^4.0.1",
+        "react-pdf-js": "^3.0.7",
         "react-redux": "^5.0.6",
         "react-remarkable": "^1.1.3",
         "recompose": "^0.26.0",
@@ -65,11 +66,11 @@
         "semantic-ui-css": "^2.3.1",
         "semantic-ui-react": "^0.79.1",
         "style-loader": "^0.20.3",
-        "webpack": "^4.5.0",
+        "webpack": "^4.6.0",
         "webpack-bundle-analyzer": "^2.11.1",
-        "webpack-cli": "^2.0.14",
-        "webpack-dev-middleware": "^3.0.0",
-        "webpack-hot-middleware": "^2.21.2",
-        "webpack-manifest-plugin": "^2.0.0-rc.2"
+        "webpack-cli": "^2.0.15",
+        "webpack-dev-middleware": "^3.1.2",
+        "webpack-hot-middleware": "^2.22.1",
+        "webpack-manifest-plugin": "^2.0.1"
     }
 }
