--- a/native/package.json
+++ b/native/package.json
@@ -3,8 +3,8 @@
     "version": "0.1.0",
     "private": true,
     "devDependencies": {
-        "react-native-scripts": "1.13.2",
         "jest-expo": "26.0.0",
+        "react-native-scripts": "1.13.2",
         "react-test-renderer": "16.3.0-alpha.1"
     },
     "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
@@ -20,6 +20,7 @@
     },
     "dependencies": {
         "expo": "^26.0.0",
+        "jarl-react-native": "^1.0.0-beta.3",
         "react": "16.3.0",
         "react-native": "~0.54.1"
     }
