--- a/packages/jarl-react-native/package.json
+++ b/packages/jarl-react-native/package.json
@@ -54,14 +54,22 @@
         "babel-plugin-dev-expression": "^0.2.1",
         "babel-plugin-external-helpers": "^6.22.0",
         "babel-plugin-react-native-web": "^0.5.4",
+        "babel-plugin-transform-class-properties": "^6.24.1",
+        "babel-plugin-transform-object-rest-spread": "^6.26.0",
+        "babel-plugin-transform-react-remove-prop-types": "^0.4.12",
         "babel-plugin-transform-runtime": "^6.23.0",
         "babel-preset-env": "^1.6.1",
+        "babel-preset-es2015": "^6.24.1",
+        "babel-preset-es2015-rollup": "^3.0.0",
+        "babel-preset-react": "^6.24.1",
         "babel-preset-react-native": "^4.0.0",
+        "babel-runtime": "^6.26.0",
         "enzyme": "^3.2.0",
         "enzyme-adapter-react-16": "^1.1.0",
         "jest": "^22.4.3",
         "react": "^16.3.1",
-        "react-native-web": "^0.5.4",
-        "react-dom": "^16.3.1"
+        "react-dom": "^16.3.1",
+        "react-native": "~0.54.1",
+        "react-native-web": "^0.5.4"
     }
 }
