--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "lint": "lerna run lint --stream",
         "bootstrap": "lerna bootstrap",
         "tag-version": "lerna publish --skip-npm && git push --follow-tags",
+        "xprecommit": "lint-staged",
         "start-in-docker-win":
             "docker run -it --mount type=bind,source=\"%cd%\",target=/app node:8-alpine /app/entrypoint.sh"
     },
