--- a/package.json
+++ b/package.json
@@ -13,15 +13,14 @@
         "lint": "lerna run lint --stream",
         "bootstrap": "lerna bootstrap",
         "tag-version": "lerna publish --skip-npm && git push --follow-tags",
-        "xprecommit": "lint-staged",
-        "start-docker":
-            "docker run -it --mount type=bind,source=\"%cd%\",target=/app node:8-alpine /app/entrypoint.sh"
+        "precommit": "lint-staged"
     },
     "lint-staged": {
         "**/*.{js,jsx}": ["eslint --fix --max-warnings 0", "git add"],
         "**/*.{js,jsx,json,css}": ["prettier --write", "git add"]
     },
     "devDependencies": {
+        "babel-cli": "6.26.0",
         "babel-eslint": "^8.2.2",
         "discord.js": "^11.3.2",
         "eslint": "^4.6.1",
@@ -33,8 +32,9 @@
         "fs-extra": "^5.0.0",
         "husky": "^1.3.1",
         "isomorphic-fetch": "^2.2.1",
-        "lerna": "^2.10.0",
+        "lerna": "^3.13.0",
         "lint-staged": "^8.1.4",
-        "prettier": "^1.11.1"
+        "prettier": "^1.11.1",
+        "rollup": "0.53.0"
     }
 }
