--- a/demo/package.json
+++ b/demo/package.json
@@ -1,7 +1,7 @@
 {
     "private": true,
     "name": "jarl-react-demo-sites",
-    "version": "1.0.0-beta.4",
+    "version": "1.0.0-beta.5",
     "scripts": {
         "cypress": "cypress open",
         "start": "babel-node ./server/index.js",
@@ -10,7 +10,8 @@
         "clean": "git clean -fdX .",
         "lint": "eslint . --max-warnings 0",
         "ci-stop": "pkill -SIGINT JARLDEMO",
-        "ci-cypress": "cypress run --record --key ${CYPRESS_DASHBOARD} --env JARL_VERSION=${JARL_VERSION},CIRCLE_BUILD_NUM=${CIRCLE_BUILD_NUM}",
+        "ci-cypress":
+            "cypress run --record --key ${CYPRESS_DASHBOARD} --env JARL_VERSION=${JARL_VERSION},CIRCLE_BUILD_NUM=${CIRCLE_BUILD_NUM}",
         "ci-start": "babel-node ./server/production.js",
         "local-e2e-run": "npm-run-all ci-cypress ci-stop",
         "local-e2e": "npm-run-all --parallel ci-start local-e2e-run"
@@ -42,8 +43,8 @@
         "extract-text-webpack-plugin": "^4.0.0-beta.0",
         "file-loader": "^1.1.11",
         "history": "^4.7.2",
-        "jarl-react": "^1.0.0-beta.4",
-        "jarl-react-redux": "^1.0.0-beta.4",
+        "jarl-react": "^1.0.0-beta.5",
+        "jarl-react-redux": "^1.0.0-beta.5",
         "npm-run-all": "^4.1.2",
         "opn": "^5.2.0",
         "postcss-loader": "^2.1.3",
