--- a/packages/jarl-react-redux/package.json
+++ b/packages/jarl-react-redux/package.json
@@ -1,6 +1,6 @@
 {
     "name": "jarl-react-redux",
-    "version": "1.0.0-beta.4",
+    "version": "1.0.0-beta.5",
     "description": "Redux integration for JARL",
     "main": "index.js",
     "module": "es/index.js",
@@ -24,10 +24,7 @@
         "reducer.js"
     ],
     "jest": {
-        "setupFiles": [
-            "raf/polyfill",
-            "./tools/configureJest.js"
-        ],
+        "setupFiles": ["raf/polyfill", "./tools/configureJest.js"],
         "testRegex": "__tests__/.+\\.test\\.js$"
     },
     "keywords": [
@@ -54,7 +51,7 @@
     },
     "dependencies": {
         "invariant": "^2.2.2",
-        "jarl-react": "^1.0.0-beta.4",
+        "jarl-react": "^1.0.0-beta.5",
         "prop-types": "^15.6.0"
     },
     "devDependencies": {
